--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "main": "dist/main.js",
   "dependencies": {},
   "devDependencies": {
+    "@babel/preset-env": "^7.7.4",
+    "@babel/preset-typescript": "^7.7.4",
     "@types/jest": "^24.0.18",
     "@typescript-eslint/eslint-plugin": "^2.0.0",
     "@typescript-eslint/parser": "^2.0.0",
-    "awesome-typescript-loader": "^5.2.1",
+    "babel-jest": "^24.9.0",
+    "babel-loader": "^8.0.6",
     "css-loader": "^3.2.0",
     "eslint": "^6.2.2",
     "eslint-config-prettier": "^6.1.0",
@@ -18,7 +21,6 @@
     "jest": "^24.9.0",
     "prettier": "^1.18.2",
     "style-loader": "^1.0.0",
-    "ts-jest": "^24.0.2",
     "typescript": "^3.5.3",
     "webpack": "^4.39.2",
     "webpack-cli": "^3.3.7",
